--- a/Front/final-project/src/app/shared/components/single-product/single-product.component.html
+++ b/Front/final-project/src/app/shared/components/single-product/single-product.component.html
@@ -8,7 +8,7 @@
                 </a>
             </li>
             <li>
-                <a href="">
+                <a [routerLink]="['/app/product',product?.id]">
                     <i class="ti ti-eye"></i>
                 </a>
             </li>
