--- a/Front/final-project/src/app/views/app/wishlist/wishlist.component.html
+++ b/Front/final-project/src/app/views/app/wishlist/wishlist.component.html
@@ -1,1 +1,60 @@
-<p>wishlist works!</p>
+<app-breadcrumb [title]=" 'Sevimlilər' "></app-breadcrumb>
+<section id="shopping-cart-wishlist">
+    <div class="container">
+        <div class="row">
+            <div class="offset-1 col-xl-10">
+                <div *ngIf="wishlist!=null" class="table-product-area">
+                    <h4 class="title">Sevimlilər</h4>
+                    <table class="table cart-item-list">
+                        <thead>
+                            <tr>
+                                <th>Məhsul</th>
+                                <th>Qiymət</th>
+                                <th>Status</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let item of wishlist">
+                                <td>
+                                    <div class="product-area d-flex align-items-center">
+                                        <a (click)="removeWishlistItem($event,item.product.id)" href="#"
+                                            class="close_icon me-2">
+                                            <svg id="icon3" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                                viewBox="0 0 16 16">
+                                                <path data-name="Path 174" d="M0,0H16V16H0Z" fill="none"></path>
+                                                <path data-name="Path 175"
+                                                    d="M14.95,6l-1-1L9.975,8.973,6,5,5,6,8.973,9.975,5,13.948l1,1,3.973-3.973,3.973,3.973,1-1L10.977,9.975Z"
+                                                    transform="translate(-1.975 -1.975)" fill="#fb1159"></path>
+                                            </svg>
+                                        </a>
+                                        <div class="product-img">
+                                            <img src="{{item.product.photos[0]}}" alt="">
+                                        </div>
+
+                                        <span> {{item.product.name}}</span>
+                                    </div>
+                                </td>
+                                <td class="product-price ">
+                                    {{item.product.price}} ₼
+                                </td>
+                                <td>
+                                    <span *ngIf="item.product.inStock" class="my-badge">Stokda</span>
+                                    <span *ngIf="!item.product.inStock" class="my-badge bg-danger">Bitib</span>
+                                </td>
+                                <td>
+                                    <a class="btn btn-pink" [routerLink]="['/app/product',item.product.id]">Məhsula
+                                        bax</a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div *ngIf="wishlist==null" class="empty d-flex justify-content-center align-items-center">
+                    <h4 class="text-center me-4">Sevimlilərdə məhsul yoxdur</h4>
+                    <a class="btn btn-pink" [routerLink]="['']">Ana səhifəyə dön</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
