Deal of day added

--- a/Admin/admin/src/app/shared/containers/layout/sidebar/sidebar.component.html
+++ b/Admin/admin/src/app/shared/containers/layout/sidebar/sidebar.component.html
@@ -41,6 +41,9 @@
                 <a class="collapse-item" [routerLink]="['/app/product']">Məhsul</a>
                 <a class="collapse-item" [routerLink]="['/app/shop-collection']">Kolleksiya</a>
                 <a class="collapse-item" [routerLink]="['/app/brand']">Brend</a>
+                <a class="collapse-item" [routerLink]="['/app/deal-of-day']">Günün Təklifi</a>
+                <a class="collapse-item" [routerLink]="['/app/social-links']">Sosial Linklər</a>
+                <a class="collapse-item" [routerLink]="['/app/settings']">Tənzimləmələr</a>
             </div>
         </div>
     </li>
