--- a/Front/final-project/src/app/shared/components/countdown/countdown.component.html
+++ b/Front/final-project/src/app/shared/components/countdown/countdown.component.html
@@ -1,5 +1,5 @@
 <div class="deals-countdown">
-    <h4>Deals End in </h4>
+    <h4>Bitmə vaxtı </h4>
     <div class="deals-count">
         <div class="single-count"><span>{{daysToDday}}</span><span class="count-title">days</span></div>
         <div class="single-count"><span><span>:</span>{{hoursToDday}}</span><span class="count-title">Hours</span></div>
