--- a/Front/final-project/src/app/views/app/shop-details/shop-details.component.html
+++ b/Front/final-project/src/app/views/app/shop-details/shop-details.component.html
@@ -100,7 +100,7 @@
                                         <h3>Məhsul reytinqi</h3>
                                         <div class="ratings">
                                             <div class="rating-score">
-                                                <h4> 4.7</h4>
+                                                <h4> {{product?.starCount}}</h4>
                                                 <div class="star mb-2">
                                                     <i *ngFor="let star of starCount(product?.starCount)"
                                                         class="fas fa-star"></i>
