--- a/Front/final-project/src/app/views/app/checkout/checkout.component.html
+++ b/Front/final-project/src/app/views/app/checkout/checkout.component.html
@@ -2,7 +2,7 @@
 
 <section id="checkout">
     <div class="container">
-        <div class="row">
+        <div *ngIf="adress!=null" class="row">
             <div class="offset-lg-1 col-lg-5">
                 <div class="order">
                     <h3>Sifarişiniz</h3>
@@ -25,22 +25,124 @@
                 </div>
             </div>
             <div class="offset-lg-1 col-lg-5">
-                <h3>Adres</h3>
+                <h3>Ünvan</h3>
                 <div class="user-info-area">
                     <div class="user-info">
                         <span>
                             <i class="ti ti-location-pin"></i>
-                            <p>{{user?.adress.adress1}}</p>
+                            <p>
+                                {{adress?.country}}, {{adress?.city}}, {{adress?.adress1}},
+                                {{adress?.adress2}}, {{adress?.postcode}}
+                            </p>
                         </span>
-                        <a href="#">Yenilə</a>
+                        <a [routerLink]="['/app/account/adress']">Yenilə</a>
                     </div>
                     <div class="user-info">
                         <span>
                             <i class="ti ti-clipboard"></i>
                             <p>Bu adresə göndəriləcək</p>
                         </span>
-                        <a href="#">Yenilə</a>
                     </div>
+                    <div class="user-info">
+                        <span>
+                            <i class="ti ti-headphone-alt"></i>
+                            <p>{{user?.phone}}</p>
+                        </span>
+                    </div>
+                    <div class="user-info">
+                        <span>
+                            <i class="ti ti-email"></i>
+                            <p>{{user?.email}}</p>
+                        </span>
+                    </div>
+                </div>
+                <h3 class="my-4">Ödəniş</h3>
+                <div class="payment-area mb-5">
+                    <label class="payment active">
+                        <input type="radio" name="payment" value="1" checked="" class="d-none">
+                        <span>
+                            <i class="ti ti-truck"></i>
+                            Yerində nağd ödəniş
+                        </span>
+                    </label>
+                    <label class="payment">
+                        <input type="radio" name="payment" value="2" checked="" class="d-none">
+                        <span>
+                            <i class="ti ti-credit-card"></i>
+                            <span>VISA / MASTERCARD</span>
+                        </span>
+                    </label>
+                </div>
+                <button type="submit" (click)="sale()" href="#" class="btn btn-pink">Ödəniş Et</button>
+            </div>
+        </div>
+        <div *ngIf="adress==null" class="row">
+            <div class="offset-lg-1 col-lg-5">
+                <h3 class="text-start">Ünvan məlumatları</h3>
+                <form [formGroup]="adressForm" (ngSubmit)="create()">
+                    <div class="form-group">
+                        <label [ngClass]="{ 'is-invalid': submitted && f.country.errors }">Ölkə</label>
+                        <input name="country" formControlName="country" type="text">
+                        <div *ngIf="submitted && f.country.errors" class="text-danger">
+                            <div *ngIf="f.country.errors.required">Ölkə boş ola bilməz</div>
+                            <div *ngIf="f.country.errors.maxLenght">Ölkə maksimum 50 xarakter olmalıdır</div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label [ngClass]="{ 'is-invalid': submitted && f.city.errors }">Şəhər</label>
+                        <input name="city" formControlName="city" type="text">
+                        <div *ngIf="submitted && f.city.errors" class="text-danger">
+                            <div *ngIf="f.city.errors.required">Şəhər boş ola bilməz</div>
+                            <div *ngIf="f.city.errors.maxLenght">Şəhər maksimum 50 xarakter olmalıdır</div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label [ngClass]="{ 'is-invalid': submitted && f.adress1.errors }">Ünvan 1</label>
+                        <input name="adress1" formControlName="adress1" type="text">
+                        <div *ngIf="submitted && f.adress1.errors" class="text-danger">
+                            <div *ngIf="f.adress1.errors.required">Ünvan boş ola bilməz</div>
+                            <div *ngIf="f.adress1.errors.maxLenght">Ünvan maksimum 200 xarakter olmalıdır</div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label [ngClass]="{ 'is-invalid': submitted && f.adress2.errors }">Ünvan 2</label>
+                        <input name="adress2" formControlName="adress2" type="text">
+                        <div *ngIf="submitted && f.adress2.errors" class="text-danger">
+                            <div *ngIf="f.adress2.errors.maxLenght">Ünvan maksimum 200 xarakter olmalıdır</div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label [ngClass]="{ 'is-invalid': submitted && f.postCode.errors }">Poçt Kodu</label>
+                        <input name="postCode" formControlName="postCode" type="text">
+                        <div *ngIf="submitted && f.postCode.errors" class="text-danger">
+                            <div *ngIf="f.postCode.errors.maxLenght">Poçt kodu maksimum 50 xarakter olmalıdır</div>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-pink w-100 mt-2">Yenilə</button>
+                </form>
+            </div>
+            <div class="offset-lg-1 col-lg-5">
+                <div class="order">
+                    <h3>Sifarişiniz</h3>
+                    <div class="order-list">
+                        <div class="order-product-area">
+                            <div *ngFor="let item of basket" class="order-product">
+                                <img src="{{item.product.photos[0]}}" alt="">
+                                <div class="name-price">
+                                    <p>{{item.product.name}}</p>
+                                    <p class="price">{{item.product.price}} ₼</p>
+                                </div>
+
+                            </div>
+                            <div class="total-text">
+                                <h6>Cəm</h6>
+                                <p class="price">{{basket|totalPrice}} ₼</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <h3>Əlaqə</h3>
+                <div class="user-info-area">
                     <div class="user-info">
                         <span>
                             <i class="ti ti-headphone-alt"></i>
@@ -56,32 +158,6 @@
                         <a href="#">Yenilə</a>
                     </div>
                 </div>
-                <h3 class="my-4">Ödəniş</h3>
-                <div class="payment-area mb-5">
-                    <label class="payment active">
-                        <input type="radio" name="payment" value="1" checked="">
-                        <span>
-                            <i class="ti ti-truck"></i>
-                            Yerində nağd ödəniş
-                        </span>
-                    </label>
-                    <label class="payment">
-                        <input type="radio" name="payment" value="2" checked="">
-                        <span>
-                            <i class="ti ti-credit-card"></i>
-                            <span>VISA / MASTERCARD</span>
-                        </span>
-                    </label>
-                    <!-- <a href="#" class="payment active">
-                        <i class="ti ti-truck"></i>
-                        <span>Yerində nağd ödəniş</span>
-                    </a> -->
-                    <!-- <a href="#" class="payment">
-                        <i class="ti ti-credit-card"></i>
-                        <span>VISA / MASTERCARD</span>
-                    </a> -->
-                </div>
-                <button type="submit" (click)="sale()" href="#" class="btn btn-pink">Ödəniş Et</button>
             </div>
         </div>
     </div>
