--- a/Front/final-project/src/app/views/app/checkout/checkout.component.scss
+++ b/Front/final-project/src/app/views/app/checkout/checkout.component.scss
@@ -91,6 +91,7 @@
       display: flex;
       align-items: center;
       transition: 0.3s;
+      cursor: pointer;
       &:last-child {
         border-left: 0;
         border-top-right-radius: 5px;
@@ -113,6 +114,27 @@
       a {
         color: white;
       }
+    }
+  }
+  .form-group {
+    label {
+      font-size: 14px;
+      font-weight: 600;
+      color: #373737;
+      display: block;
+      margin: 14px 0;
+      line-height: 1;
+    }
+    input {
+      height: 50px;
+      border: 1px solid #e1e2e6;
+      font-family: "Jost", sans-serif;
+      font-size: 14px;
+      font-weight: 400;
+      color: #090b17;
+      padding: 15px 20px;
+      width: 100%;
+      box-shadow: none !important;
     }
   }
 }
